@@ -33,5 +33,6 @@ void ags_oscillator_frame_count_callback(GtkSpinButton *spin_button, AgsOscillat
 void ags_oscillator_frequency_callback(GtkSpinButton *spin_button, AgsOscillator *oscillator);
 void ags_oscillator_phase_callback(GtkSpinButton *spin_button, AgsOscillator *oscillator);
 void ags_oscillator_volume_callback(GtkSpinButton *spin_button, AgsOscillator *oscillator);
+void ags_oscillator_sync_point_callback(GtkSpinButton *spin_button, AgsOscillator *oscillator);
 
 #endif /*__AGS_OSCILLATOR_CALLBACKS_H__ */
