@@ -5,7 +5,8 @@ ags (1.1.0)
 	* implemented AgsSynthGenerator:delay property
 	* implemented needed properties of AgsApplySynth in order to use ags_synth_generator_compute_extended()
 	* refactored AgsApplySynth to use ags_synth_generator_compute_extended()
-	* TODO:JK: refactored AgsOscillator to have triple sync
+	* refactored AgsOscillator to have triple sync
+	* TODO:JK: refactored AgsOscillator persistence in ags_simple_file.c
 	* TODO:JK: implemented AgsPositionNotationCursor and AgsPositionAutomationCursor
 	* TODO:JK: fix and implement auto-scroll
 
